--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,7 +1,13 @@
 .chunk{
-  display:inline-block;
   width: 100px;
   height: 100px;
+}
+.container{
+  display:flex;
+  flex-direction:row;
+  justify-content:flex-start;
+  height:400px;
+  background-color:grey;
 }
 .color1{
   background-color: red;
