--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,4 +1,4 @@
-<view class="container">
+<view bind:tap="onLike" class="container">
   <image class="container" src="images/like.png" />
   <text>9</text>
 </view>
