--- a/components/like/index.wxss
+++ b/components/like/index.wxss
@@ -1,5 +1,7 @@
 .container{
-  
+  display:inline-flex;
+  flex-direction:row;
+  padding:10rpx;
 }
 .container image{
   width:32rpx;
@@ -7,5 +9,9 @@
 }
 .container text{
   font-size:24rpx;
+  line-height:24px;
   color:#bbbbbb;
+  position:relative;
+  bottom:10rpx;
+  left:6rpx;
 }
