--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,4 +1,4 @@
 <view bind:tap="onLike" class="container">
   <image class="container" src="{{like?yesSrc:noSrc}}" />
-  <text>{{like?count1:count2}}</text>
+  <text>{{count}}</text>
 </view>
