--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,1 +1,2 @@
 <v-like like="{{classicData.like_status}}"  count="{{classicData.fav_nums}}"/>
+<v-movie img="{{classicData.image}}" content="{{classicData.content}}"></v-movie>
