--- a/components/classic/movie/index.wxss
+++ b/components/classic/movie/index.wxss
@@ -12,8 +12,12 @@
 .tag {
   width: 46rpx;
   height: 142rpx;
+  position: relative;
+  right: 310rpx;
+  bottom: 58rpx;
 }
 
 .content {
   font-size: 36rpx;
+  max-width: 550rpx;
 }
